# Estudos

./: README.md  chaves git
Banco/: conta.cpp  conta.hpp  main  main.cpp
Banco - inicio/: titular.cpp  titular.hpp
Banco- Enum e templates/: Caixa.cpp  Caixa.hpp  Conta.hpp  ContaCorrente.cpp  ContaCorrente.hpp  ContaPoupanca.hpp  Cpf.cpp  Funcionario.cpp  Funcionario.hpp  Gerente.cpp  Gerente.hpp  Pessoa.hpp  main  main.cpp
Banco-Heranca/: Caixa.hpp  Conta.hpp  ContaPoupanca.cpp  Cpf.cpp  Funcionario.hpp  Gerente.cpp  Gerente.hpp  Titular.cpp  main.cpp
BancoHeranca/: Caixa.cpp  Conta.cpp  ContaCorrente.cpp  ContaCorrente.hpp  Cpf.hpp  Funcionario.cpp  PessoaAutenticavel.cpp  PessoaAutenticavel.hpp  Titular.hpp  main
Documentos/: chaves git
Downloads/: arquivoteste
Forca Clion/: CMakeLists.txt  adciona_palavra.cpp  adciona_palavra.hpp  chuta.cpp  chuta.hpp  forca.cpp  imprime_cabecalho.hpp  imprime_erros.cpp  imprime_erros.hpp  imprime_palavra.cpp  imprime_palavra.hpp  ler_arquivo.cpp  letra_existe.cpp  nao_acertou.cpp  nao_acertou.hpp  nao_enforcou.cpp  palavras.txt  resultado.cpp  resultado.hpp  salva_arquivo.cpp  sorteia_palavra.cpp  sorteia_palavra.hpp
Jogo da Forca 2.0/: adciona_palavra.cpp  chuta.cpp  forca.cpp  forca.out  imprime_cabecalho.cpp  imprime_erros.cpp  imprime_palavra.cpp  ler_arquivo.cpp  ler_arquivo.hpp  letra_existe.cpp  nao_acertou.cpp  nao_enforcou.cpp  palavras.txt  resultado.cpp  resultado.hpp  salva_arquivo.cpp  sorteia_palavra.cpp
Jogo-da-Forca/: jogodaforca  jogodaforca.cpp  jogodaforca.out
Ping Socket ICMP/: .gitignore
(+154 files in other folders)
